--- a/prime_admin/templates/lms/cash_flow.html
+++ b/prime_admin/templates/lms/cash_flow.html
@@ -21,19 +21,13 @@
                 <div>
                     Cash Flow
                     <div class="page-title-subheading">
+                        Bank Transfer
                     </div>
                 </div>
             </div>
 
             <div class="page-title-actions">
                 {% if session['permissions'][RENDERED_MODEL.__amname__] is defined %}
-                    {% if current_user.role.name == "Secretary" %}
-                    <button type="button" data-toggle="modal" data-target="#mdl_pre_deposit" data-placement="bottom"
-                            class="btn-shadow mr-3 btn btn-primary">
-                        <i class="fa fa-plus"></i> Pre Deposit
-                    </button>
-                    {% endif %}
-
                     {% if current_user.role.name == "Secretary" %}
                     <button type="button" data-toggle="modal" data-target="#mdl_deposit" data-placement="bottom"
                             class="btn-shadow mr-3 btn btn-primary">
