check: error deposit

--- a/prime_admin/templates/lms/cash_on_hand.html
+++ b/prime_admin/templates/lms/cash_on_hand.html
@@ -119,8 +119,7 @@
         </div>
         
         <div class="card-body">
-            <!-- <div class="row">
-
+            <div class="row">
                 <div class="col-lg-12 col-xl-12">
                     <div class="card mb-3 widget-content">
                         <div class="widget-content-wrapper">
@@ -134,9 +133,7 @@
                         </div>
                     </div>
                 </div>
-
-
-            </div> -->
+            </div>
 
             <div class="row">
                 <div class="col-lg-6 col-xl-6">
@@ -147,7 +144,7 @@
                                 <div class="widget-subheading">Total Cash on Hand</div>
                             </div>
                             <div class="widget-content-right">
-                                <div class="widget-numbers text-success"><span id="total_student_payments">₱ 0.00</span></div>
+                                <div class="widget-numbers text-primary"><span id="total_student_payments">₱ 0.00</span></div>
                             </div>
                         </div>
                     </div>
@@ -176,7 +173,7 @@
                                 <div class="widget-subheading">Total Cash on Hand</div>
                             </div>
                             <div class="widget-content-right">
-                                <div class="widget-numbers text-success"><span id="final_fund1">₱ 0.00</span></div>
+                                <div class="widget-numbers text-primary"><span id="final_fund1">₱ 0.00</span></div>
                             </div>
                         </div>
                     </div>
