--- a/prime_admin/templates/lms/supplies_table.html
+++ b/prime_admin/templates/lms/supplies_table.html
@@ -27,12 +27,9 @@
             
         </div>
     </div>
-    
-    <div class="row">
-        <div class="col-md-12">
-            <div class="main-card mb-3 card">
-                    <div class="table-responsive">
-                        <table id="index_table" class="align-middle mb-0 table table-bordered table-striped table-hover">
+            <div style="width:1300px;" class="main-card mb-3 card">
+                    <div  class="table-responsive">
+                        <table id="index_table" class="mb-0 table">
                             <thead>
                             <tr>
                                 <th class="text-center"></th>
@@ -80,7 +77,5 @@
                         </table>
                     </div>
             </div>
-        </div>
-    </div>
 </div>
 {% endblock %}
