fix: registration error

--- a/prime_admin/templates/lms/orientation_attendance.html
+++ b/prime_admin/templates/lms/orientation_attendance.html
@@ -222,8 +222,8 @@
         </div>
 
         <div class="d-block text-right card-footer">
-            <button id="btn_clear_entries" class="btn-wide btn btn-danger" type="button" value="Clear Entry">Clear Entries</button>
-            <input form="orientation_form" class="btn-wide btn btn-success" type="submit" class="btn btn-primary" value="Save">
+            <!-- <button id="btn_clear_entries" class="btn-wide btn btn-danger" type="button" value="Clear Entry">CLEAR ENTRIES</button> -->
+            <input form="orientation_form" class="btn-wide btn btn-success" type="submit" class="btn btn-primary" value="SAVE">
         </div>
     </div>
     {% endif %}
