--- a/app/admin/templates/admin/admin_base.html
+++ b/app/admin/templates/admin/admin_base.html
@@ -177,12 +177,12 @@
 
 
 {% if debug %}
-<div id="toast-container" class="toast-bottom-left">
+<!-- <div id="toast-container" class="toast-bottom-left">
         <div class="toast toast-error" aria-live="polite">
             <div class="toast-progress" style="width: 0%;"></div>
             <button type="button" class="toast-close-button" role="button" onclick="close_toast()">×</button>
             <div class="toast-title">DEVELOPMENT MODE!</div>
             <div class="toast-message">The application is running in debug</div>
         </div>
-</div>
+</div> -->
 {% endif %}
